refactor(provider): update ProviderAdapter interface and adapters
Add capabilities()/supports() to ProviderAdapter. Update Claude/Codex/OpenCode
adapters. Add CodexHistoryReader and CodexHistorySessionService for history
symmetry.